tests/good/shadow_local_over_ctor.ppl
data Nat = Zero | Succ Nat;
define iszero = \ Succ.
case Succ of -- local variable
  | Zero -> True
  | Succ n -> False; -- constructor
iszero Zero
