tests/bad/answer_recursive.ppl
data Nat = Zero | Succ Nat;
Zero
